--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:20-alpine
+FROM node:alpine
+
+ENV CI=true
+ENV WDS_SOCKET_PORT=0
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json ./
+RUN npm install
 
-RUN npm install 
-
-COPY . .
-
-EXPOSE 3000
+COPY ./ ./
 
 CMD ["npm", "start"]
